# ros2_ws

./: somefile.txt
bags/test2/: metadata.yaml
install/: local_setup.sh  setup.sh
install/audio_capture/lib/audio_capture/: audio_capture
install/audio_capture/share/audio_capture/: local_setup.sh  package.sh
install/audio_common/share/audio_common/: package.sh
install/audio_common_msgs/share/audio_common_msgs/: local_setup.sh  package.bash  package.sh
install/audio_play/lib/audio_play/: audio_play
install/audio_play/share/audio_play/: local_setup.sh  package.dsv  package.ps1  package.sh
install/bme280/lib/bme280/: enviro_node  enviro_subscriber_node
install/bme280/share/bme280/: local_setup.sh  package.bash  package.sh
install/flir_lepton_capture/share/flir_lepton_capture/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/flir_lepton_data_processor/lib/flir_lepton_data_processor/: thermal_image_processor_node
install/flir_lepton_data_processor/share/flir_lepton_data_processor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/flir_lepton_msgs/share/flir_lepton_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/flir_lepton_purethermal2/lib/flir_lepton_purethermal2/: purethermal2_node  purethermal2_subscriber
install/flir_lepton_purethermal2/share/flir_lepton_purethermal2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/flir_lepton_ros2/lib/flir_lepton_ros2/: lepton_capture
install/flir_lepton_ros2/share/flir_lepton_ros2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gscam/lib/gscam/: gscam_node
install/gscam/share/gscam/: package.sh  package.xml
install/m2s2_bringup/share/m2s2_bringup/: package.bash  package.ps1  package.sh  package.zsh
install/m2s2_custom_interfaces/share/m2s2_custom_interfaces/: local_setup.sh  package.bash  package.sh  package.zsh
install/m2s2_test_python/share/m2s2_test_python/: package.dsv  package.ps1  package.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  hw_status_publisher  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: battery = my_py_pkg.battery_node:mainimage_subscriber  image_subscriber  image_subscriber_rt  led_panel = my_py_pkg.led_panel:mainbattery  led_panels
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/m2s2_test_python/: setup.cfg  setup.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
src/my_cpp_pkg/src/install/: local_setup.sh  setup.sh
src/my_cpp_pkg/src/log/: latest_build
src/my_python_pkg/: setup.py
src/my_python_pkg/my_python_pkg/: image_subscriber.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: webcam.launch.xml
src/my_robot_interfaces/: CMakeLists.txt
(+364 files in other folders)
