<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flir_lepton_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="avally02@gmail.com">azraa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>example_interfaces</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
